Black faces in sculpt mode with Color Attribute shading #112284

Closed
opened 2023-09-12 15:13:03 +02:00 by Julien Kaspar · 3 comments
Member

System Information
Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-b492f73f87)

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-11 20:52, hash: dd9f196c2e2e
Worked: (newest version of Blender that worked as expected)

Short description of error
Under these conditions the mesh has black faces in sculpt mode:

  1. The object does not have any color attributes
  2. The viewport shading color is set to "Attribute"

Exact steps for others to reproduce the error

  • Add a new object
  • Enter sculpt mode
  • Change the viewport shading color to "Attribute"
**System Information** Operating system: Linux-6.5.2-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: AMD Radeon RX 7900 XT (gfx1100, LLVM 16.0.6, DRM 3.54, 6.5.2-gentoo) AMD 4.6 (Core Profile) Mesa 23.3.0-devel (git-b492f73f87) **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-11 20:52, hash: `dd9f196c2e2e` Worked: (newest version of Blender that worked as expected) **Short description of error** Under these conditions the mesh has black faces in sculpt mode: 1. The object does not have any color attributes 2. The viewport shading color is set to "Attribute" **Exact steps for others to reproduce the error** - Add a new object - Enter sculpt mode - Change the viewport shading color to "Attribute"
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-12 15:13:04 +02:00

LLVM

Hi, have you use virtual machine?

> `LLVM` Hi, have you use virtual machine?

At first glance I would imagine that the color black is expected, since we don't have a defined attribute color to show.

But in other views, such as Object Mode, apparently the default color is white.

So it is indeed inconsistent.

I also tested it in Blender 3.6.3, and there the object appears white. So it's a regression in Blender 4.0.

Could it be related to Workbench Next? @pragma37, does this issue ring a bell?

At first glance I would imagine that the color black is expected, since we don't have a defined attribute color to show. But in other views, such as `Object Mode`, apparently the default color is white. So it is indeed inconsistent. I also tested it in Blender 3.6.3, and there the object appears white. So it's a regression in Blender 4.0. Could it be related to Workbench Next? @pragma37, does this issue ring a bell?
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-09-13 19:18:49 +02:00
Member

@mano-wii Yes, this is 100% on the Workbench side.

I tried to cleanup the Color type selection in Workbench Next, but it looks like I got some things wrong.
#112344 should fix this and other sculpt related issues.

@mano-wii Yes, this is 100% on the Workbench side. I tried to cleanup the Color type selection in Workbench Next, but it looks like I got some things wrong. #112344 should fix this and other sculpt related issues.
Miguel Pozo referenced this issue from a commit 2023-09-13 22:36:46 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-13 22:36:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112284
No description provided.